--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
+    "@fortawesome/vue-fontawesome": "^3.0.1",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "pinia": "^2.0.17",
@@ -15,6 +16,7 @@
     "vue-router": "^4.1.3"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^6.1.2",
     "@vitejs/plugin-vue": "^3.0.1",
     "sass": "^1.54.5",
     "vite": "^3.0.4"
